--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1680,108 +1680,107 @@ stories:
   domain: http://www.highlandernews.com/
   link: https://www.highlandernews.com/articles/2016/04/29/voters-have-new-leeway-sales-tax-granite-shoals
 images:
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: rain-princess-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
-- name: stalin-time-street-car-san-francisco.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-street-car-san-francisco.jpg
-- name: braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-shipping-container-ship-sunny-day.jpg
-- name: machine-road-machine-road-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
-- name: copper-circuit-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-frosty-downtown-lights.jpg
-- name: server-cloud-server-racks-door-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alien-goggles.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gred-mash.JPG
-- name: stories-server-racks-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-copper-circuit.jpg
-- name: bf-skinner-white-house-west-wing-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-west-wing-view.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: la-muse-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-butterfly-purple-flower.jpg
-- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: old-school-house-old-schoolhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-post-modern.jpg
-- name: nazi-invasion-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cross-against-trees.jpg
-- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-collage.JPG
-- name: adam-smith-adam-smith-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
-- name: mosaic-face-mosaic-face-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-bright-sand.jpg
-- name: oldtrain-oldtrain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
-- name: copper-circuit-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sunflower-big-green.jpg
-- name: copper-circuit-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cruise-ship-shore-log.jpg
-- name: old-church-oldchurch-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-deep-connections.jpg
-- name: meadowbutterfly-meadow-butterfly-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-soul.jpg
-- name: bluelake-blue-brush-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-38-67.jpg
-- name: capital-battle-capitolbattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle.jpg
-- name: nazi-invasion-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0079.jpg
-- name: copper-circuit-san-pedro-light-cities.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-pedro-light-cities.jpg
-- name: file-00-00-59-36 2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-59-36
-    2.jpg
-- name: legal-statue-legalstatue-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-paper.jpg
-- name: capital-battle-capitolbattle-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-constitution.jpg
-- name: la-muse-desert-road-mountains.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-desert-road-mountains.jpg
-- name: castle-wall-DSC-0067-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alien-goggles.JPG
-- name: adam-smith-adam-smith-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
-- name: paris-paris-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-blocks.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: nazi-invasion-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-high-speed-train-station.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-- name: server-cloud-server-racks-door-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-wols.jpg
-- name: oldhouse-granaryfield-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
-- name: adam-smith-adam-smith-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-satan-red.jpg
-- name: copper-circuit-satellite-with-sunset.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-satellite-with-sunset.jpg
-- name: dc-statue-dcstatue-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dry-skin.jpg
-- name: berlinwall-DSC-0084-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-storm.jpg
-- name: eduardo-eduardo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crafty-painting.jpg
-- name: adam-smith-adam-smith-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-- name: wind-mills-windmills-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-- name: miamibeach-miamibeach-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-emily-carr.jpg
+- name: meadowbutterfly-meadow-butterfly-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purp-paper.jpg
+- name: bf-skinner-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-crypto-wheels-old-compute-bletchley.jpg
+- name: status-berlin-status-berlin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
+- name: ellis-island-ellis-island-room-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dali-three.jpg
+- name: bf-skinner-stairs-down-blue-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stairs-down-blue-green.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
+- name: wind-mills-windmills-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-constitution.jpg
+- name: abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
+- name: nazi-invasion-old-barn-falling-over.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-barn-falling-over.jpg
+- name: walled-garden-walled-garden-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-dresden.jpg
+- name: bf-skinner-crow-stkump-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-crow-stkump-waterfront.jpg
+- name: oldhousecars-house-old-cars-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gred-mash.jpg
+- name: mediterranean-mediterranean-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kandinsky-bv.jpg
+- name: miamibeach-miamibeach-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
+- name: aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
+- name: school-clouds-church-clouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-pablo-blue.jpg
+- name: crow_oily_mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_oily_mcoilface.jpg
+- name: file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00.jpg
+- name: oldcabin-store-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-gan-vogh.jpg
+- name: oldhouse-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-two.jpg
+- name: hollywood-building-hollywood-building-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
+- name: aws-s3-stories-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-deep-connections.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+- name: white-house-whitehouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-granite.jpg
+- name: old-cabin-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-pablo-blue.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+- name: sand-hand-sand-hand-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-oily-mcoilface.jpg
+- name: bluelake-colorful-blocks-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-01-17-38.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+- name: crow_monet_one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_monet_one.jpg
+- name: nazi-invasion-old-building-phoenix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+- name: bordercrossing-bordercrossing-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
+- name: crow-crow-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
+- name: braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-salesforce-bay-bridge.jpg
+- name: nazi-invasion-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dandelions-in-rocks.jpg
+- name: castle-wall-DSC-0067-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-feed-people.JPG
+- name: bf-skinner-high-speed-train-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-high-speed-train-station.jpg
+- name: old-granary-field-granaryfield-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-paper.jpg
+- name: copper-circuit-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
+- name: nazi-invasion-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cargo-ship_36587814601_o.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+- name: blossombar-purple-storm-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
+- name: bluelake-dark-rain-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-00-00.jpg
+- name: udnie-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0048.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+- name: legal-statue-legalstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-mucha-mult.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+- name: store-on-corner-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
 ---
 Trip To Orient Anything But Fun And Games.&nbsp;Beyond The Hardwood Giving Back With 3rd Annual Christmas Basketball Camp.&nbsp;Frost, Husker Continues To Use Juco Players To Fill Areas Of Need.&nbsp;How To Choose The Right Payment Processor.&nbsp;Black Velvets Reign Continues As Iowa Alcohol Sales Increase Again.&nbsp;Bucks Beat Pacers, Spoil Brogdon's Return.&nbsp;If Your Coffee Shop Has This, Its Winning!.&nbsp;Republic Police Chief Gets Help From Trump Campaign Manager.&nbsp;
